[project]
name = "cs-market-sell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.123.9",
    "logger>=1.4",
    "psycopg>=3.3.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
