[project]
name = "cs-market-sell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "fastapi>=0.123.9",
    "filelock>=3.20.0",
    "httpx>=0.28.1",
    "logger>=1.4",
    "psycopg>=3.3.1",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]
